--- a/www/index.html
+++ b/www/index.html
@@ -250,7 +250,6 @@
         </div>
     </div>
 </div>
-
 <!--end contacts page-->
 
 <!--Payments page-->
@@ -301,6 +300,7 @@
         </div>
     </div>
 </div>
+<!--end payment page-->
 
 <div data-role="page" id="vodafonepage" style="background-image: url('img/lol.jpg');">
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
@@ -373,7 +373,7 @@
         </li>
 
         <li>
-            <a onclick="">
+            <a onclick="change_page('#paymentspage','pop')">
                 <h5 class="h" style="font-weight: lighter; color: #8e0d0e"><i class="zmdi zmdi-money"></i>&nbsp;&nbsp;&nbsp;&nbsp;PAYMENTS
                 </h5>
                 <!--<h2></h2>-->
