--- a/www/index.html
+++ b/www/index.html
@@ -244,7 +244,7 @@
             </div>
             <div class="col-xs-6">
                 <div class="box align-right">
-                    <a href="#" class="ui-btn ui-mini nd2-btn-icon-block" style="color: white" onclick="get_numbers()">Done</a>
+                    <a href="#" class="ui-btn ui-mini nd2-btn-icon-block" style="color: white" onclick="done()">Done</a>
                 </div>
             </div>
         </div>
