--- a/www/index.html
+++ b/www/index.html
@@ -234,7 +234,7 @@
     </div>
 
     <div data-role="footer" data-position="fixed"
-         style="position: absolute; right: 0; bottom: 0; left: 0; background-color: #1d1d1d">
+         style="position: fixed; right: 0; bottom: 0; left: 0; background-color: #1d1d1d">
 
         <div class="row center-xs">
             <div class="col-xs-6">
