--- a/www/index.html
+++ b/www/index.html
@@ -373,7 +373,7 @@
         </li>
 
         <li>
-            <a onclick="change_page('#paymentspage','pop')">
+            <a onclick="get_balance()">
                 <h5 class="h" style="font-weight: lighter; color: #8e0d0e"><i class="zmdi zmdi-money"></i>&nbsp;&nbsp;&nbsp;&nbsp;PAYMENTS
                 </h5>
                 <!--<h2></h2>-->
