--- a/www/index.html
+++ b/www/index.html
@@ -271,7 +271,7 @@
         <div class="nd2-card" style="background-color: white">
             <br>
             <div class="col-xs-12">
-                <input type="text" id="msisdn" value="" data-clear-btn="true"
+                <input type="text" id="msisdn" onkeyup="convert_num2()" value="" data-clear-btn="true"
                        placeholder="Mobile Number">
                 <br>
 
@@ -324,7 +324,7 @@
                        placeholder="Voucher Number">
                 <br>
 
-                <input type="text" id="msisdnx" value="" data-clear-btn="true"
+                <input type="text" id="msisdnx" onkeyup="convert_num()" value="" data-clear-btn="true"
                        placeholder="Mobile Number">
                 <br>
 
