--- a/www/index.html
+++ b/www/index.html
@@ -37,12 +37,29 @@
     <script type="text/javascript" src="./js/chartist.min.js"></script>
     <script type="text/javascript" src="./js/underscore.js"></script>
     <script type="text/javascript">
+
         $(document).ready(function () {
-//            get_slides();
-//
+
+
             $("body>[data-role='panel']").panel().enhanceWithin();
-//            alert("s");
+
+
         });
+
+        document.addEventListener("backbutton", function (e) {
+            if ($.mobile.activePage.is('#loginpage')) {
+                /*
+                 Event preventDefault/stopPropagation not required as adding backbutton
+                 listener itself override the default behaviour. Refer below PhoneGap link.
+                 */
+                //e.preventDefault();
+                navigator.app.exitApp();
+            }
+            else {
+                navigator.app.backHistory()
+            }
+        }, false);
+
     </script>
 
 </head>
@@ -53,44 +70,47 @@
 <div data-role="page" id="loginpage" style="background-image: url('img/lol.jpg')">
 
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
-        <h1>Deywuro</h1>
+        <!--<a onclick="home()" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-home"></i></a>-->
+        <!--<a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>-->
+        <h1 style="opacity: 1">Deywuro</h1>
     </div>
 
     <div data-role="content">
-        <br><br>
-        <!--<br><br>-->
-        <!--<br><br>-->
-        <!--<br><br>-->
-        <div>
-            <div class="nd2-card" style="background-color: white">
-                <div class="container" style="margin-top: 10%; margin-bottom: 10%">
-                    <div class="row">
-                        <div class="col-xs-1"></div>
+        <br><br><br>
 
-                        <div class="col-xs-10">
-                            <div class="align-center">
-                                <img src="img/lo.jpg">
-                            </div>
+        <div class="nd2-card" style="background-color: white">
+            <div class="container" style="margin-top: 10%; margin-bottom: 10%">
+                <div class="row">
+                    <div class="col-xs-1"></div>
 
-                            <div>
-                                <input type="text" id="username" value="" data-clear-btn="true"
-                                       placeholder="Username">
-                            </div>
-                            <br>
-
-                            <div>
-                                <input type="password" id="password" value="" data-clear-btn="true"
-                                       placeholder="Password">
-                            </div>
-
-                            <div>
-                                <a style="background-color: #8e0d0e" onclick="login()"
-                                   class="ui-btn ui-btn-inline clr-btn-deep-orange waves-effect waves-button waves-effect waves-button">Login</a>
-                            </div>
+                    <div class="col-xs-10">
+                        <div class="align-center">
+                            <img src="img/lo.jpg">
                         </div>
 
-                        <div class="col-xs-1"></div>
+                        <div>
+                            <input type="text" id="username" value="" data-clear-btn="true"
+                                   placeholder="Username">
+                        </div>
+                        <br>
+
+                        <div>
+                            <input type="password" id="password" value="" data-clear-btn="true"
+                                   placeholder="Password">
+                        </div>
+
+                        <div>
+                            <a style="background-color: #8e0d0e" onclick="login()"
+                               class="ui-btn ui-btn-inline clr-btn-deep-orange waves-effect waves-button waves-effect waves-button">Login</a>
+                        </div>
+                        <br>
+
+                        <div class="align-center">
+                            <a href="#registerpage" data-transition="pop"><h5>Sign up here !</h5></a>
+                        </div>
                     </div>
+
+                    <div class="col-xs-1"></div>
                 </div>
             </div>
         </div>
@@ -207,6 +227,80 @@
     </div>
 </div>
 <!--end message page-->
+
+<!--Register page-->
+<div data-role="page" id="registerpage" style="background-image: url('img/lol.jpg')">
+    <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
+        <!--<a onclick="" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-back"></i></a>-->
+        <a onclick="change_page('#loginpage','pop')"><i class="zmdi zmdi-arrow-back"></i></a>
+        <h1 style="opacity: 1">Sign Up</h1>
+    </div>
+
+    <div data-role="content">
+        <br><br>
+
+        <div class="nd2-card" style="background-color: white">
+
+            <div class="container" style="margin-top: 10%; margin-bottom: 10%">
+                <div class="row">
+                    <div class="col-xs-1"></div>
+
+                    <div class="col-xs-10">
+
+                        <div>
+                            <input type="text" id="rname" placeholder="Name" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input type="number" id="rnumber" placeholder="Phone Number" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input type="text" id="rusername" placeholder="Username" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input type="email" id="remail" placeholder="Email" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input type="password" id="rpassword" placeholder="Password" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input type="password" id="rcpassword" placeholder="Confirm Password" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <a style="background-color: #8e0d0e" onclick="register()"
+                               class="ui-btn ui-btn-inline clr-btn-deep-orange waves-effect waves-button waves-effect waves-button">Sign
+                                Up</a>
+                        </div>
+
+                    </div>
+
+                    <div class="col-xs-1"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <!--<br><br><br>-->
+        <!--<div class="row">-->
+        <!--<div class="col-xs-6"></div>-->
+        <!--<div class="col-xs-4 col-sm-4">-->
+        <!--<div class="align-right">-->
+        <!--<button onclick="change_page('#contactspage','pop')"-->
+        <!--style="background-color: #8e0d0e; position: fixed"-->
+        <!--class="ui-btn-fab ui-btn-raised clr-warning ui-btn ui-btn-inline waves-effect waves-button waves-effect waves-button">-->
+        <!--<i class="zmdi zmdi-phone zmd-2x"></i></button>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-xs-2"></div>-->
+        <!--</div>-->
+    </div>
+</div>
+<!--end registerpage-->
 
 <!--Contacts page-->
 <div data-role="page" id="contactspage" style="background-image: url('img/lol.jpg')">
