--- a/www/index.html
+++ b/www/index.html
@@ -228,6 +228,51 @@
 </div>
 <!--end message page-->
 
+<!--Group Message page-->
+<div data-role="page" id="gmessagepage" style="background-image: url('img/lol.jpg')">
+    <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
+        <a onclick="home()" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-home"></i></a>
+        <a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
+        <h1 style="opacity: 1">Group Messages</h1>
+    </div>
+
+    <div data-role="content">
+        <br><br><br><br>
+
+        <div class="nd2-card" style="background-color: white">
+
+            <div class="container" style="margin-top: 10%; margin-bottom: 10%">
+                <div class="row">
+                    <div class="col-xs-1"></div>
+
+                    <div class="col-xs-10">
+
+                        <div>
+                            <input readonly id="gnumbers" placeholder="Phone Numbers" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input id="gsource" placeholder="Source" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <input id="gmessage" placeholder="Write something here" data-clear-btn="true"><br>
+                        </div>
+
+                        <div>
+                            <a style="background-color: #8e0d0e" onclick="send_group_sms()"
+                               class="ui-btn ui-btn-inline clr-btn-deep-orange waves-effect waves-button waves-effect waves-button">Send</a>
+                        </div>
+                    </div>
+
+                    <div class="col-xs-1"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end group message-->
+
 <!--Register page-->
 <div data-role="page" id="registerpage" style="background-image: url('img/lol.jpg')">
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
@@ -346,6 +391,48 @@
 </div>
 <!--end contacts page-->
 
+<!--Sms Groups page-->
+<div data-role="page" id="smsgrouppage" style="background-image: url('img/lol.jpg')">
+    <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
+        <a onclick="home()" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-home"></i></a>
+        <a href="#leftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
+        <h1 style="opacity: 1">SMS Groups</h1>
+    </div>
+
+    <div data-role="content">
+
+        <br><br>
+        <div class="nd2-card" style="background-color: white" id="">
+            <!---->
+            <div id="mysmsgrouppage" data-filter="true" data-filter-placeholder="Search SMS Groups">
+                <!--<div class="align-center">-->
+                <!--<p>No Data yet</p>-->
+                <!--</div>-->
+
+            </div>
+        </div>
+    </div>
+
+    <div data-role="footer" data-position="fixed"
+         style="position: fixed; right: 0; bottom: 0; left: 0; background-color: #1d1d1d">
+        <!---->
+        <div class="row center-xs">
+            <div class="col-xs-6">
+                <!--<div class="box">-->
+                <!--<a href="#" class="ui-btn ui-mini nd2-btn-icon-block"><i class='zmdi zmdi-plus'></i> add</a>-->
+                <!--</div>-->
+            </div>
+            <div class="col-xs-6">
+                <div class="box align-right">
+                    <a href="#" class="ui-btn ui-mini nd2-btn-icon-block" style="color: white"
+                       onclick="group_done()">Done</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--end sms group page-->
+
 <!--Payments page-->
 <div data-role="page" id="paymentspage" style="background-image: url('img/lol.jpg');">
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
@@ -455,10 +542,10 @@
     <!--<a data-role="button">Profile</a>-->
 
     <ul data-role="listview" data-icon="false">
-        <li data-role="list-divider" class="">
-            Menu
-        </li>
-        <hr style="opacity: .2">
+        <!--<li data-role="list-divider"  class="">-->
+        <!--Menu-->
+        <!--</li>-->
+        <!--<hr style="opacity: .2">-->
 
         <!---->
         <li>
@@ -474,6 +561,16 @@
                 </h5>
                 <!--<h2></h2>-->
             </a>
+        </li>
+
+        <li>
+            <a onclick="change_page('#smsgrouppage','pop')">
+                <h5 class="h" style="font-weight: lighter; color: #8e0d0e"><i class="zmdi zmdi-accounts-list"></i>&nbsp;&nbsp;&nbsp;&nbsp;SMS
+                    GROUPS
+                </h5>
+                <!--<h2></h2>-->
+            </a>
+            <!--<hr style="opacity: .5">-->
         </li>
 
         <li>
