--- a/www/index.html
+++ b/www/index.html
@@ -295,7 +295,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#mpopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#mleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">Message</h1>
     </div>
 
     <div data-role="content">
@@ -417,7 +417,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#gpopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#gleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">Group Message</h1>
     </div>
 
     <div data-role="content">
@@ -600,7 +600,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#cpopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#cleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">Contacts</h1>
     </div>
 
     <div data-role="content">
@@ -706,7 +706,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#spopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#sleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">SMS Groups</h1>
     </div>
 
     <div data-role="content">
@@ -810,7 +810,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#ppopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#pleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">Payments</h1>
     </div>
 
     <div data-role="content">
@@ -931,7 +931,7 @@
     <div data-role="header" data-position="fixed" style="background-color: #8e0d0e">
         <a href="#vpopupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" class="ui-btn ui-btn-right wow fadeIn" data-wow-delay='1.2s'><i class="zmdi zmdi-sign-in zmd-flip-horizontal"></i></a>
         <a href="#vleftpanel" class="ui-btn ui-btn-left wow fadeIn" data-wow-delay='0.8s'><i class="zmdi zmdi-menu"></i></a>
-        <h1 style="opacity: 1">Dashboard</h1>
+        <h1 style="opacity: 1">Payments</h1>
     </div>
 
     <div data-role="content">
